páginas com extends

--- a/website/templates/website/quero_trabalhar.html
+++ b/website/templates/website/quero_trabalhar.html
@@ -1,7 +1,5 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-<h1>página inicial</h1>
-
-<h2>outra coisa</h2>
+<h1>sou o quero trabalhar</h1>
 {% endblock %}
