--- a/website/templates/website/quero_trabalhar_programacao.html
+++ b/website/templates/website/quero_trabalhar_programacao.html
@@ -10,7 +10,7 @@
       <input type="checkbox"> Full Stack
     </label>
   </div>
-<button type="submit" class="btn btn-default">Próximo</button>
+<button type="button" class="btn btn-default"><a href="{%url 'terminando'%}">Próximo</a></button>
 </form>
 
 {% endblock %}
