--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -1,5 +1,25 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-<h1>sou o login</h1>
+    <div class="container">
+
+	    <div class="box">
+
+	      <form class="form-signin">
+	        <h2 class="logo">Logo</h2>
+	        <hr>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Quero trabalhar</button>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Quero contratar</button>
+				<br><br>
+			<hr>	
+		        <div class="checkbox">
+			       	<button type="button" class="btn btn-primary">Login com facebook</button>
+		        	<button type="button" class="btn btn-default">Cadastre-se</button>		   
+		        </div>
+
+
+	      </form>
+		</div>	
+
+    </div>
 {% endblock %}
