--- a/website/templates/website/quero_trabalhar.html
+++ b/website/templates/website/quero_trabalhar.html
@@ -1,11 +1,26 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-<h1> Ótimo! Qual a sua área de atuação?</h1>
+  <div class="container">
+    <h2 class="area">Ótimo! Qual a sua área de atuação?</h2>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h4 class="area">Escolha a área</h4>
+        <hr>
+    <form class="form-job">
+      <div class="row">
+      
+      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-design' %}">Design</a>
+      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-programacao' %}">Desenvolvimento</a>
+      <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-negocios' %}">Negócios</a>
 
-<a type="button" class="btn btn-default" href="{% url 'quero-trabalhar-design' %}">Design</a>
-<a type="button" class="btn btn-default" href="{% url 'quero-trabalhar-programacao' %}">Programadora</a>
-<a class="btn btn-default" href="{% url 'quero-trabalhar-negocios' %}">Negócios</a>
+       </div>
+    </form>
+      </div>
+    </div>
+  </div>
+
+
 
 
 {% endblock %}
