--- a/website/templates/website/procura_trampo.html
+++ b/website/templates/website/procura_trampo.html
@@ -2,16 +2,27 @@
 
 {% block conteudo %}
 
-	<div class="page-header">
-	  <h1>Busque <small>seu Job!</small></h1>
+	<div class="container">
+	  <h2 class="area">Ótimo! Qual a sua área de atuação?</h2>
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	   		<h4 class="area">Escolha a área</h4>
+	   		<hr>
+		<form class="form-job">
+			<div class="row">
+
+			  <button class="btn btn-lg btn-primary btn-block" type="submit">Design</button>
+			  <button class="btn btn-lg btn-primary btn-block" type="submit">Desenvolvimento</button>
+			  <button class="btn btn-lg btn-primary btn-block" type="submit">Negócios</button>
+			 </div>
+		</form>
+	    </div>
+	  </div>
 	</div>
 
-	<form class="navbar-form navbar-left" role="search">
-	 	 <div class="form-group">
-		    <input type="text" class="form-control" placeholder="Buscar job">
-		 </div>
-	  <button type="submit" class="btn btn-default">Procurar</button>
-	</form>
+
+
+
 
 	{% for job in jobs %}
     <ul class="list-group">
