--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -2,6 +2,11 @@
 
 {% block conteudo %}
     <div class="container">
+	<div class="row">
+		<div class="col-sm-6">
+			{{form.as_p}}
+		</div>
+	</div>
 
 	    <div class="box">
 
