--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,7 +1,26 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <p>conteúdo coluna 1</p>
+    </div>
+    <div class="col-sm-6">
+      <p>conteudo coluna 2</p>
+    </div>
+  </div>
+</div>
+
+
 <h1>página inicial</h1>
 
 <h2>outra coisa</h2>
+
+<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+    <span class="sr-only">60% Complete</span>
+  </div>
+</div>
 {% endblock %}
