--- a/website/templates/website/quero_trabalhar.html
+++ b/website/templates/website/quero_trabalhar.html
@@ -1,24 +1,22 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-  <div class="container">
-    <h2 class="area">Ótimo! Qual a sua área de atuação?</h2>
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h4 class="area">Escolha a área</h4>
-        <hr>
-    <form class="form-job">
-      <div class="row">
-      
-      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-design' %}">Design</a>
-      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-programacao' %}">Desenvolvimento</a>
-      <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-negocios' %}">Negócios</a>
-
-       </div>
-    </form>
-      </div>
+<div class="container">
+  <h2 class="area">Ótimo! Qual a sua área de atuação?</h2>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <form>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-md-offset-3">
+            {% for category in categories %}
+              <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-areas' category.slug %}">{{category.name}}</a>
+            {% endfor %}
+          </div>
+        </div>
+      </form>
     </div>
   </div>
+</div>
 
 
 
