--- a/website/templates/website/quero_trabalhar_areas.html
+++ b/website/templates/website/quero_trabalhar_areas.html
@@ -10,24 +10,22 @@
           <h4 class="area">Em que áreas de {{category.name | lower}} você tem interesse?</h4>
           <hr>
           <form class="form-job">
-              {% for area in areas %}
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox"> {{area.name}}
-                  </label>
-                </div>
-              {% endfor %}
+            {% for area in areas %}
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="areas" value="{{area.id}}"> {{area.name}}
+              </label>
+            </div>
+            {% endfor %}
             <div class="row">
               <div class="col-sm-12">
                 <a type="button" class="btn btn-lg btn-primary btn-block" href="">Continuar</a>
               </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </div>
 </div>
-  </div>
-
-  {% endblock %}
+{% endblock %}
