--- a/website/templates/website/login.html
+++ b/website/templates/website/login.html
@@ -8,10 +8,23 @@
 	      <form class="form-signin">
 	        <h2 class="logo">Logo</h2>
 	        <hr>
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Quero trabalhar</button>
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Quero contratar</button>
-				<br><br>
+	          <div class="form-group">
+			    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+			    <div class="col-sm-10">
+			      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+			    </div>
+			  </div>
+			  <div class="form-group">
+			    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+			    <div class="col-sm-10">
+			      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+			    </div>
+			  </div>
 			<hr>	
+			<div class="row">
+		    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'terminando' %}">Continuar</a>
+			   	   
+		    </div>
 		        <div class="checkbox">
 			       	<button type="button" class="btn btn-primary">Login com facebook</button>
 		        	<button type="button" class="btn btn-default">Cadastre-se</button>		   
