--- a/website/templates/website/quero_trabalhar.html
+++ b/website/templates/website/quero_trabalhar.html
@@ -7,15 +7,15 @@
       <div class="panel-body">
         <h4 class="area">Escolha a área</h4>
         <hr>
-    <form class="form-job">
-      <div class="row">
-      
-      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-design' %}">Design</a>
-      <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-programacao' %}">Desenvolvimento</a>
-      <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-negocios' %}">Negócios</a>
+          <form class="form-job">
+            <div class="row">
+            
+                <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-design' %}">Design</a>
+                <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-programacao' %}">Desenvolvimento</a>
+                <a class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar-negocios' %}">Negócios</a>
 
-       </div>
-    </form>
+             </div>
+          </form>
       </div>
     </div>
   </div>
