--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,10 +1,21 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-<h1>MariaJob</h1>
-<h2>Bem-vinda! O que você procura hoje?</h2>
-  <button type="button" class="btn btn-default"><a href="{% url 'quero-contratar' %}">Quero Contratar</a></button>
-  <button type="button" class="btn btn-default"><a href="{% url 'quero-trabalhar' %}">Quero Trabalhar</a></button>
-  <button type="button" class="btn btn-default"><a href="{% url 'login' %}">Entrar no Sistema</a></button>
-  <button type="button" class="btn btn-default"><a href="">Entrar com Facebook</a></button>
+    <div class="container">
+
+	    <div class="box">
+
+	      <form class="form-signin">
+	        <h2 class="logo">Logo</h2>
+		        <hr>
+		        	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-trabalhar' %}">Quero trabalhar</a>
+
+		        	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'quero-contratar' %}">Quero contratar</a>
+		        <hr>
+		        <h4 class="area">Já sou cadastrado</h4>
+		       		<a class="btn btn-lg btn-primary btn-block" href="{% url 'login' %}">Entrar</a>
+		  </form>
+		</div>	
+
+    </div>
 {% endblock %}
