--- a/website/templates/website/terminando.html
+++ b/website/templates/website/terminando.html
@@ -1,9 +1,29 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-<h1>Quase lá!</h1>
-<p>O que você deseja fazer agora?</p>
-<a type="button" class="btn btn-default" href="{% url 'procurar-trampo' %}">Procurar vagas abertas</a>
-<a type="button" class="btn btn-default" href="{% url 'completa-perfil' %}">Oferecer meus serviços</a>
+
+
+	<div class="container">
+	  <h2 class="area">O que você deseja fazer agora?</h2>
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
+	   		<hr>
+			<form class="form-job">
+			    <div class="row">
+
+			    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'busca_vagas' %}">Procurar vagas abertas</a>
+
+			    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'completa-perfil' %}">Oferecer meus serviços</a>			    
+			    </div>
+		</div>
+
+		</form>
+	    </div>
+	  </div>
+	</div>
+
+
+
 
 {% endblock %}
