--- a/website/templates/website/terminando.html
+++ b/website/templates/website/terminando.html
@@ -12,7 +12,7 @@
 			<form class="form-job">
 			    <div class="row">
 
-			    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'busca_vagas' %}">Procurar vagas abertas</a>
+			    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'busca-vagas' %}">Procurar vagas abertas</a>
 
 			    	<a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'completa-perfil' %}">Oferecer meus serviços</a>			    
 			    </div>
