--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -28,5 +28,7 @@
     <script src='{% static "js/jquery-3.1.1.min.js" %}'></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src='{% static "js/bootstrap.min.js" %}'></script>
+    {% block javascript %}
+    {% endblock %}
   </body>
 </html>
