Alteracao das pages de cadastro

--- a/website/templates/website/contrata_alteraperfil.html
+++ b/website/templates/website/contrata_alteraperfil.html
@@ -4,21 +4,47 @@
 
 
 	<div class="container">
-	  <h2 class="area">O que você deseja fazer agora?</h2>
+	  <h2 class="area"></h2>
 	  <div class="panel panel-default">
 	    <div class="panel-body">
-	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
+	   		<h4>Laura</h4>
 	   		<hr>
+	   		<h5>Brasil,SP,Campinas</h5>
+	   		
 
-
-			<form class="form-job">	
-
-			</form>
 		</div>
 
 		
 	    </div>
 	  </div>
+	<div class="container">
+	  <h2 class="area"></h2>
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	   		<h4>Pagamento</h4>
+	   		<hr>
+	   		<h5>**** **** **** 0000</h5>
+	   		
+
+		</div>
+
+		
+	    </div>
+	  </div>
+	<div class="container">
+	  <h2 class="area"></h2>
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	   		<h4>Pagamento pelo Paypal</h4>
+	   		<hr>
+	   		<h5><a href="https://www.paypal.com/">Adicionar pagamento </a></h5>
+	   		
+
+		</div>
+
+		
+	    </div>
+	  </div>  	  
 	</div>
 
 
