--- a/website/templates/website/contrata_historico.html
+++ b/website/templates/website/contrata_historico.html
@@ -4,22 +4,30 @@
 
 
 	<div class="container">
-	  <h2 class="area">O que você deseja fazer agora?</h2>
+	  <h2 class="area"></h2>
 	  <div class="panel panel-default">
 	    <div class="panel-body">
-	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
-	   		<hr>
+	   		<h4>Projeto</h4>
+			<a href="#">Projeto</a>
 
+		</div>
 
-			<form class="form-job">	
+	    </div>
+	  </div>
+	<div class="container">
+	  <h2 class="area"></h2>
+	  <div class="panel panel-default">
+	    <div class="panel-body">
+	   		<h4>Projeto</h4>
+			<a href="#">Projeto</a>
 
-			</form>
 		</div>
 
 		
 	    </div>
 	  </div>
-	</div>
+ 	  
+	
 
 
 
