--- a/website/templates/website/busca_vagas.html
+++ b/website/templates/website/busca_vagas.html
@@ -2,11 +2,6 @@
 
 {% block conteudo %}
 <div class="container">
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{message.tags}}">{{message}}</div>
-    {% endfor %}
-  {% endif %}
   <div class="row">
     <div class="col-sm-12">
       <h2 class="area">Vagas disponíveis</h2>
@@ -29,9 +24,10 @@
         <div class="panel panel-default">
           <div class="panel-body">
             <h4>{{job.title}}</h4>
-            <h5>{{job.description}}</h5>
+            <h5 class="italic">Descrição:</h5>
+            <p>{{job.description}}</p>
             <hr>
-            <h5>Valor: {{job.budget}}</h5>
+            <h5>Valor: R$ {{job.budget}}</h5>
             <a class="btn btn-success" href="{% url 'candidatar-vaga' job.id %}">Candidatar-se</a>
           </div>
         </div>
