--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -21,6 +21,36 @@
     <![endif]-->
   </head>
   <body>
+  {% if request.user.is_authenticated %}
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+    <div class="navbar-header">
+     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+       <span class="sr-only">Toggle navigation</span>
+       <span class="icon-bar"></span>
+       <span class="icon-bar"></span>
+       <span class="icon-bar"></span>
+     </button>
+     <a class="navbar-brand" href="">MariaJob</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+     <ul class="nav navbar-nav">
+       <li class="active"><a href="">Inicio</a></li>
+       <li><a href="#about">Meus Projetos</a></li>
+       <li><a href="#contact">Configurações</a></li>
+     </ul>
+    </div><!--/.nav-collapse -->
+    </div>
+    </nav>
+    {% endif %}
+    {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{message.tags}} alert-dismissible" role="alert">
+    	  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      {{message}}
+      </div>
+      {% endfor %}
+    {% endif %}
     {% block conteudo %}
     {% endblock %}
 
