--- a/website/templates/website/completa_perfil.html
+++ b/website/templates/website/completa_perfil.html
@@ -1,7 +1,26 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
-
+<nav class="navbar navbar-inverse navbar-fixed-top">
+<div class="container">
+<div class="navbar-header">
+ <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+   <span class="sr-only">Toggle navigation</span>
+   <span class="icon-bar"></span>
+   <span class="icon-bar"></span>
+   <span class="icon-bar"></span>
+ </button>
+ <a class="navbar-brand" href="">MariaJob</a>
+</div>
+<div id="navbar" class="collapse navbar-collapse">
+ <ul class="nav navbar-nav">
+   <li class="active"><a href="">Inicio</a></li>
+   <li><a href="#about">Meus Projetos</a></li>
+   <li><a href="#contact">Configurações</a></li>
+ </ul>
+</div><!--/.nav-collapse -->
+</div>
+</nav>
 	<div class="container">
 	  <h2 class="area">Complete seu perfil</h2> 
 	  <br>
