--- a/website/templates/website/contrata_buscapessoa.html
+++ b/website/templates/website/contrata_buscapessoa.html
@@ -1,27 +1,43 @@
 {% extends "website/base.html" %}
 
 {% block conteudo %}
+<div class="container">
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{message.tags}}">{{message}}</div>
+    {% endfor %}
+  {% endif %}
+  <div class="row">
+    <div class="col-sm-12">
+      <h2 class="area">Sugestões de Job</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-md-offset-3">
+      <p>
+        Áreas:
+        {% for area in selected_areas %}
+        <span class="label label-default">{{area.name}} <a style="color: white">&times;</a></span>
+        {% endfor %}
+      </p>
 
-
-	<div class="container">
-	  <h2 class="area">O que você deseja fazer agora?</h2>
-	  <div class="panel panel-default">
-	    <div class="panel-body">
-	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
-	   		<hr>
-
-
-			<form class="form-job">	
-
-			</form>
-		</div>
-
-		
-	    </div>
-	  </div>
-	</div>
-
-
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-md-offset-3">
+      {% for job in jobs %}
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <h4>{{job.title}}</h4>
+            <h5>{{job.description}}</h5>
+            <hr>
+            <h5>Valor: {{job.budget}}</h5>
+            <a class="btn btn-success" href="{% url 'candidatar-vaga' job.id %}">Info</a>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 
 {% endblock %}
