--- a/website/templates/website/contrata_criajob.html
+++ b/website/templates/website/contrata_criajob.html
@@ -4,24 +4,50 @@
 
 
 	<div class="container">
-	  <h2 class="area">O que você deseja fazer agora?</h2>
+	  <h2 class="area">Criar Job</h2>
 	  <div class="panel panel-default">
 	    <div class="panel-body">
-	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
+	   		<h4 class="area">Qual é o projeto?</h4>
 	   		<hr>
+		<form class="form-horizontal">
+		  <div class="form-group">
+		    <label for="inputEmail3" class="col-sm-2 control-label">Projeto</label>
+		    <div class="col-sm-10">
+		      <input type="text" class="form-control" id="inputEmail3" placeholder="">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label for="inputPassword3" class="col-sm-2 control-label">Orcamento</label>
+		    <div class="col-sm-10">
+		      <input type="text" class="form-control" id="inputPassword3" placeholder="">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label for="inputPassword3" class="col-sm-2 control-label">Descrição</label>
+		    <div class="col-sm-10">
+		      <textarea class="form-control" rows="3"></textarea>
+		    </div>
+		  </div>		  
+		  <div class="form-group">
+		    <div class="col-sm-offset-2 col-sm-10">
+		      <div class="checkbox">
+		       
+		      </div>
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <div class="col-sm-offset-2 col-sm-10">
+		      <button type="submit" class="btn btn-default">cadastrar</button>
+		    </div>
+		  </div>
+		</form>
 
-
-			<form class="form-job">	
-
-			</form>
 		</div>
 
-		
+		</form>
 	    </div>
 	  </div>
 	</div>
-
-
 
 
 {% endblock %}
