--- a/website/templates/website/contrata_pagamento.html
+++ b/website/templates/website/contrata_pagamento.html
@@ -4,15 +4,49 @@
 
 
 	<div class="container">
-	  <h2 class="area">O que você deseja fazer agora?</h2>
+	  <h2 class="area">Pagamento</h2>
 	  <div class="panel panel-default">
 	    <div class="panel-body">
-	   		<h4 class="area">Que áreas de negócio você tem interesse?</h4>
+	   		<h4 class="area">Adicione as informações para Pagamento</h4>
 	   		<hr>
 
 
-			<form class="form-job">	
+			<form class="form-job">
+				<div class="checkbox">
+	              	<label>
+	                	<input type="checkbox" name="areas" value=""> Cartão de Crédito
+	               	</label>
+	              	
 
+            	</div>
+            	<div class="checkbox">
+	              	<label>
+	                   	<input type="checkbox" name="areas" value=""> Paypal
+	            	</label>     	
+    			</div>		
+		  		<div class="form-group">
+		    		<label for="inputPassword3" class="col-sm-2 control-label">Número de Cartão</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control" id="inputPassword3" placeholder="">
+			    </div>
+		  		<div class="form-group">
+			    	<label for="inputPassword3" class="col-sm-2 control-label">Data de vencimento</label>
+				    <div class="col-sm-10">
+				      <input type="text" class="form-control" id="inputPassword3" placeholder="">
+			    </div>
+				</div>
+		  		<div class="form-group">
+		    		<label for="inputPassword3" class="col-sm-2 control-label">País</label>
+			    <div class="col-sm-10">
+			      <input type="text" class="form-control" id="inputPassword3" placeholder="">
+			    </div>
+			    <br>
+		  		<div class="form-group">
+				    <div class="col-sm-offset-2 col-sm-10">
+						<button type="button" class="btn btn-danger">Cancelar</button>
+							<button type="button" class="btn btn-success">Finalizar</button>
+				    </div>
+			  	</div>			    						
 			</form>
 		</div>
 
