--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -36,7 +36,7 @@
     <div id="navbar" class="collapse navbar-collapse">
      <ul class="nav navbar-nav">
        <li class="active"><a href="">Inicio</a></li>
-       <li><a href="#about">Meus Projetos</a></li>
+       <li><a href="{% url 'contrata-buscapessoa' %}">Meus Projetos</a></li>
        <li><a href="#contact">Configurações</a></li>
      </ul>
     </div><!--/.nav-collapse -->
