conserto Dona maria busca vagas

--- a/website/templates/website/quero_contratar_areas.html
+++ b/website/templates/website/quero_contratar_areas.html
@@ -19,7 +19,7 @@
             {% endfor %}
             <div class="row">
               <div class="col-sm-12">
-                <a type="button" class="btn btn-lg btn-primary btn-block" href="">Continuar</a>
+                <a type="button" class="btn btn-lg btn-primary btn-block" href="{% url 'contrata-buscapessoa' %}">Continuar</a>
               </div>
             </div>
           </form>
