--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,8 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #98b7bf;
+  background-color: #fff2f2;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .form-signin {
@@ -43,11 +44,12 @@ body {
   width: 400px;
   margin: 0 auto 0 auto;
   padding: 0px 0px 70px 0px;
-  border: #E32636 4px solid;
+  border: #ccc 1px solid;
 }
 .logo {
   display: block;
-  padding: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -91,6 +93,7 @@ body {
 }
 .area{
     text-align: center;
+    margin-top: 20px;
 }
 
 .panel .panel-default h5{
@@ -101,8 +104,7 @@ hr {
   margin: 15px;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #E32636;
-    border-color: #2e6da4;
+@font-face {
+     font-family:Quicksand;
+     src: url('../fonts/Quicksand_Bold.otf');
 }
