--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -1,10 +1,10 @@
 {% extends "website/base.html" %}
-
+{% load static %}
 {% block conteudo %}
   <div class="container">
     <div class="box">
       <form class="form-signin">
-        <h2 class="logo">Logo</h2>
+      <img style="margin-left:auto;margin-right:auto;" src="{% static 'img/logo.png' %}" alt="Smiley face" class="logo">
         <hr>
         <div class="form-group">
 					<div class="row">
