areas dinamicas no contrata pessoa

--- a/website/templates/website/contrata_buscapessoa.html
+++ b/website/templates/website/contrata_buscapessoa.html
@@ -9,7 +9,7 @@
   {% endif %}
   <div class="row">
     <div class="col-sm-12">
-      <h2 class="area">Sugestões de Job</h2>
+      <h2 class="area">Empreendedoras Disponíveis</h2>
     </div>
   </div>
   <div class="row">
